# mathlibs-tester

./: .magnum.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml  circle.yml  results.md  runtest.bash  setup  setup.py  shippable.yml  wercker.yml
cdash_scripts/: hpcc_umb_runtest.bash
cmake/: autocmake.cfg  autocmake.yml
cmake/custom/: FindCompilerVersion.cmake  GetCompilerVersion.py  build_info.cmake  build_info.h.in  main_custom.cmake  test.cmake
cmake/downloaded/: autocmake_math_libs.cmake
performance/: pbs_run_umb  results.md  results.rst
src/: CMakeLists.txt  CTestConfig.cmake  example.F90  print_info.F90  print_info.c
